spacing fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -43,7 +43,7 @@ main {
   @media (max-width: 48rem) {
     padding: 0.5rem 1rem 1rem 1rem;
     section:not(:first-child) {
-      padding-top: 3rem;
+      padding-top: 4rem;
     }
   }
 
@@ -77,7 +77,7 @@ section {
     margin: 0.75rem 0 0 0;
 
     @media (max-width: 48rem) {
-      margin: 1.5rem 0 0 0;
+      margin: 1.25rem 0 0 0;
     }
   }
 }
@@ -95,7 +95,6 @@ section {
 
 #about-me {
   flex-direction: row;
-  gap: 2rem;
 
   .about-me-left {
     text-align: left;
@@ -171,7 +170,6 @@ header {
 }
 
 footer {
-  gap: 0.5rem;
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -182,6 +180,7 @@ footer {
   align-items: center;
   flex-direction: column;
   font-size: small;
+  gap: 0.5rem;
   padding: 1rem 0rem 0rem 0rem;
 }
 
@@ -296,7 +295,7 @@ nav {
 .About-me-header {
   @extend .App-header-left;
   min-height: 1rem;
-  margin-top: 0;
+  margin-top: 1.25rem;
 
   h1,
   h2,
@@ -727,7 +726,8 @@ nav {
 .contentCards-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 1.5rem;
+  margin-top: 1rem;
 }
 
 .section-heading {
